parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    ASYNC
    AWAIT
    BOOL
    CALL
    CALLABLE
    CASE
    CATCH
    CLASS
    CLONE
    COLON
    CONST
    DECLARE
    DEFAULT
    DIE
    DO
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    ENUM
    EVAL
    EXIT
    EXTENDS
    FINAL
    FINALLY
    FN
    FOREACH
    FUNCTION
    GLOBAL
    GOTO
    HALT_COMPILER
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    ITERABLE
    KEY_VALUE
    LIST
    LPAREN
    MATCH
    MIXED
    MOD
    NAMESPACE
    NEW
    NULL
    OBJECT
    POWER
    PRIVATE
    PROTECTED
    PUBLIC
    REQUIRE
    REQUIRE_ONCE
    RETURN
    RPAREN
    SELF
    STATIC
    SWITCH
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    VOID
    YIELD
    YIELD_FROM

Grammar

Rule 0     S' -> program
Rule 1     program -> OPEN_TAG statements CLOSE_TAG
Rule 2     statements -> statement2
Rule 3     statements -> statements statement2
Rule 4     statement2 -> statement SEMICOLON
Rule 5     statement2 -> if_statement
Rule 6     statement2 -> while_statement
Rule 7     statement2 -> for_statement
Rule 8     statement2 -> ONE_LINE_COMMENT
Rule 9     statement2 -> MULTI_LINE_COMMENT
Rule 10    statement -> print_statement
Rule 11    statement -> fscanf_statement
Rule 12    statement -> fgets_statement
Rule 13    statement -> assignment_statement
Rule 14    statement -> array_declaration_statement
Rule 15    statement -> BREAK
Rule 16    statement -> CONTINUE
Rule 17    statement -> function_call
Rule 18    fgets_statement -> FGETS LEFT_PAREN STDIN RIGHT_PAREN
Rule 19    fscanf_statement -> FSCANF LEFT_PAREN STDIN COMMA STRING COMMA variable_list RIGHT_PAREN
Rule 20    variable_list -> variable
Rule 21    variable_list -> variable_list COMMA variable
Rule 22    variable -> ID
Rule 23    assignment_statement -> variable assignment_operator argument
Rule 24    assignment_statement -> variable PLUS_PLUS
Rule 25    assignment_statement -> variable MINUS_MINUS
Rule 26    assignment_operator -> EQUALS
Rule 27    assignment_operator -> PLUS_EQUALS
Rule 28    assignment_operator -> MINUS_EQUALS
Rule 29    assignment_operator -> TIMES_EQUALS
Rule 30    assignment_operator -> DIVIDE_EQUALS
Rule 31    assignment_operator -> MOD_EQUALS
Rule 32    print_statement -> print_function LEFT_PAREN arguments RIGHT_PAREN
Rule 33    print_statement -> print_function arguments
Rule 34    print_function -> PRINT
Rule 35    print_function -> ECHO
Rule 36    arguments -> argument
Rule 37    arguments -> arguments DOT argument
Rule 38    argument -> STRING
Rule 39    argument -> expression
Rule 40    argument -> assignment_statement
Rule 41    argument -> function_call
Rule 42    argument -> fgets_statement
Rule 43    argument -> array_indexing
Rule 44    argument -> casting argument
Rule 45    expression -> expression PLUS term
Rule 46    expression -> expression MINUS term
Rule 47    expression -> term
Rule 48    term -> term TIMES factor
Rule 49    term -> term DIVIDE factor
Rule 50    term -> factor
Rule 51    factor -> INTEGER
Rule 52    factor -> FLOAT
Rule 53    factor -> condition
Rule 54    factor -> LEFT_PAREN expression RIGHT_PAREN
Rule 55    if_statement -> IF parenthesized_condition block else_if_extended if_part3
Rule 56    else_if_extended -> if_part2
Rule 57    else_if_extended -> else_if_extended if_part2
Rule 58    if_part2 -> ELSEIF parenthesized_condition block
Rule 59    if_part2 -> <empty>
Rule 60    if_part3 -> ELSE block
Rule 61    if_part3 -> <empty>
Rule 62    while_statement -> WHILE parenthesized_condition block
Rule 63    for_part1 -> FOR LEFT_PAREN assignment_list SEMICOLON
Rule 64    for_part1 -> FOR LEFT_PAREN SEMICOLON
Rule 65    for_statement -> for_part1 condition for_part3
Rule 66    for_statement -> for_part1 for_part3
Rule 67    for_part3 -> SEMICOLON statement_list RIGHT_PAREN for_part4
Rule 68    for_part3 -> SEMICOLON RIGHT_PAREN for_part4
Rule 69    for_part4 -> block
Rule 70    for_part4 -> SEMICOLON
Rule 71    assignment_list -> assignment_statement
Rule 72    assignment_list -> assignment_list COMMA assignment_statement
Rule 73    statement_list -> statement
Rule 74    statement_list -> statement_list COMMA statement
Rule 75    block -> LEFT_BRACE statements RIGHT_BRACE
Rule 76    block -> LEFT_BRACE RIGHT_BRACE
Rule 77    condition -> simple_condition
Rule 78    condition -> negated_condition
Rule 79    condition -> complex_condition
Rule 80    condition -> parenthesized_condition
Rule 81    simple_condition -> TRUE
Rule 82    simple_condition -> FALSE
Rule 83    simple_condition -> variable
Rule 84    simple_condition -> relational_expression
Rule 85    negated_condition -> LOGICAL_NOT condition
Rule 86    complex_condition -> condition logical_operator condition
Rule 87    parenthesized_condition -> LEFT_PAREN condition RIGHT_PAREN
Rule 88    relational_expression -> expression relational_operator expression
Rule 89    relational_operator -> EQUAL_TO
Rule 90    relational_operator -> NOT_EQUAL_TO
Rule 91    relational_operator -> LESS_THAN
Rule 92    relational_operator -> GREATER_THAN
Rule 93    relational_operator -> LESS_EQUAL
Rule 94    relational_operator -> GREATER_EQUAL
Rule 95    relational_operator -> IDENTICAL_TO
Rule 96    relational_operator -> NOT_IDENTICAL_TO
Rule 97    relational_operator -> DIFFERENT
Rule 98    logical_operator -> LOGICAL_AND
Rule 99    logical_operator -> LOGICAL_OR
Rule 100   logical_operator -> LOGICAL_XOR
Rule 101   casting -> LEFT_PAREN casting_type RIGHT_PAREN
Rule 102   casting_type -> INT_TYPE
Rule 103   casting_type -> FLOAT_TYPE
Rule 104   function_call -> NAME LEFT_PAREN array_elements RIGHT_PAREN
Rule 105   array_declaration_statement -> variable EQUALS array
Rule 106   array -> ARRAY LEFT_PAREN array_elements RIGHT_PAREN
Rule 107   array -> LEFT_BRACKET array_elements RIGHT_BRACKET
Rule 108   array_elements -> argument
Rule 109   array_elements -> array_elements COMMA argument
Rule 110   array_indexing -> variable LEFT_BRACKET INTEGER RIGHT_BRACKET

Terminals, with rules where they appear

ABSTRACT             : 
ARRAY                : 106
AS                   : 
ASYNC                : 
AWAIT                : 
BOOL                 : 
BREAK                : 15
CALL                 : 
CALLABLE             : 
CASE                 : 
CATCH                : 
CLASS                : 
CLONE                : 
CLOSE_TAG            : 1
COLON                : 
COMMA                : 19 19 21 72 74 109
CONST                : 
CONTINUE             : 16
DECLARE              : 
DEFAULT              : 
DIE                  : 
DIFFERENT            : 97
DIVIDE               : 49
DIVIDE_EQUALS        : 30
DO                   : 
DOT                  : 37
ECHO                 : 35
ELSE                 : 60
ELSEIF               : 58
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
ENUM                 : 
EQUALS               : 26 105
EQUAL_TO             : 89
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 82
FGETS                : 18
FINAL                : 
FINALLY              : 
FLOAT                : 52
FLOAT_TYPE           : 103
FN                   : 
FOR                  : 63 64
FOREACH              : 
FSCANF               : 19
FUNCTION             : 
GLOBAL               : 
GOTO                 : 
GREATER_EQUAL        : 94
GREATER_THAN         : 92
HALT_COMPILER        : 
ID                   : 22
IDENTICAL_TO         : 95
IF                   : 55
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTEGER              : 51 110
INTERFACE            : 
INT_TYPE             : 102
ISSET                : 
ITERABLE             : 
KEY_VALUE            : 
LEFT_BRACE           : 75 76
LEFT_BRACKET         : 107 110
LEFT_PAREN           : 18 19 32 54 63 64 87 101 104 106
LESS_EQUAL           : 93
LESS_THAN            : 91
LIST                 : 
LOGICAL_AND          : 98
LOGICAL_NOT          : 85
LOGICAL_OR           : 99
LOGICAL_XOR          : 100
LPAREN               : 
MATCH                : 
MINUS                : 46
MINUS_EQUALS         : 28
MINUS_MINUS          : 25
MIXED                : 
MOD                  : 
MOD_EQUALS           : 31
MULTI_LINE_COMMENT   : 9
NAME                 : 104
NAMESPACE            : 
NEW                  : 
NOT_EQUAL_TO         : 90
NOT_IDENTICAL_TO     : 96
NULL                 : 
OBJECT               : 
ONE_LINE_COMMENT     : 8
OPEN_TAG             : 1
PLUS                 : 45
PLUS_EQUALS          : 27
PLUS_PLUS            : 24
POWER                : 
PRINT                : 34
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 
RIGHT_BRACE          : 75 76
RIGHT_BRACKET        : 107 110
RIGHT_PAREN          : 18 19 32 54 67 68 87 101 104 106
RPAREN               : 
SELF                 : 
SEMICOLON            : 4 63 64 67 68 70
STATIC               : 
STDIN                : 18 19
STRING               : 19 38
SWITCH               : 
THROW                : 
TIMES                : 48
TIMES_EQUALS         : 29
TRAIT                : 
TRUE                 : 81
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VOID                 : 
WHILE                : 62
YIELD                : 
YIELD_FROM           : 
error                : 

Nonterminals, with rules where they appear

argument             : 23 36 37 44 108 109
arguments            : 32 33 37
array                : 105
array_declaration_statement : 14
array_elements       : 104 106 107 109
array_indexing       : 43
assignment_list      : 63 72
assignment_operator  : 23
assignment_statement : 13 40 71 72
block                : 55 58 60 62 69
casting              : 44
casting_type         : 101
complex_condition    : 79
condition            : 53 65 85 86 86 87
else_if_extended     : 55 57
expression           : 39 45 46 54 88 88
factor               : 48 49 50
fgets_statement      : 12 42
for_part1            : 65 66
for_part3            : 65 66
for_part4            : 67 68
for_statement        : 7
fscanf_statement     : 11
function_call        : 17 41
if_part2             : 56 57
if_part3             : 55
if_statement         : 5
logical_operator     : 86
negated_condition    : 78
parenthesized_condition : 55 58 62 80
print_function       : 32 33
print_statement      : 10
program              : 0
relational_expression : 84
relational_operator  : 88
simple_condition     : 77
statement            : 4 73 74
statement2           : 2 3
statement_list       : 67 74
statements           : 1 3 75
term                 : 45 46 47 48 49
variable             : 20 21 23 24 25 83 105 110
variable_list        : 19 21
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPEN_TAG statements CLOSE_TAG

    OPEN_TAG        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPEN_TAG . statements CLOSE_TAG
    (2) statements -> . statement2
    (3) statements -> . statements statement2
    (4) statement2 -> . statement SEMICOLON
    (5) statement2 -> . if_statement
    (6) statement2 -> . while_statement
    (7) statement2 -> . for_statement
    (8) statement2 -> . ONE_LINE_COMMENT
    (9) statement2 -> . MULTI_LINE_COMMENT
    (10) statement -> . print_statement
    (11) statement -> . fscanf_statement
    (12) statement -> . fgets_statement
    (13) statement -> . assignment_statement
    (14) statement -> . array_declaration_statement
    (15) statement -> . BREAK
    (16) statement -> . CONTINUE
    (17) statement -> . function_call
    (55) if_statement -> . IF parenthesized_condition block else_if_extended if_part3
    (62) while_statement -> . WHILE parenthesized_condition block
    (65) for_statement -> . for_part1 condition for_part3
    (66) for_statement -> . for_part1 for_part3
    (32) print_statement -> . print_function LEFT_PAREN arguments RIGHT_PAREN
    (33) print_statement -> . print_function arguments
    (19) fscanf_statement -> . FSCANF LEFT_PAREN STDIN COMMA STRING COMMA variable_list RIGHT_PAREN
    (18) fgets_statement -> . FGETS LEFT_PAREN STDIN RIGHT_PAREN
    (23) assignment_statement -> . variable assignment_operator argument
    (24) assignment_statement -> . variable PLUS_PLUS
    (25) assignment_statement -> . variable MINUS_MINUS
    (105) array_declaration_statement -> . variable EQUALS array
    (104) function_call -> . NAME LEFT_PAREN array_elements RIGHT_PAREN
    (63) for_part1 -> . FOR LEFT_PAREN assignment_list SEMICOLON
    (64) for_part1 -> . FOR LEFT_PAREN SEMICOLON
    (34) print_function -> . PRINT
    (35) print_function -> . ECHO
    (22) variable -> . ID

    ONE_LINE_COMMENT shift and go to state 9
    MULTI_LINE_COMMENT shift and go to state 10
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FSCANF          shift and go to state 23
    FGETS           shift and go to state 24
    NAME            shift and go to state 26
    FOR             shift and go to state 27
    PRINT           shift and go to state 28
    ECHO            shift and go to state 29
    ID              shift and go to state 30

    statements                     shift and go to state 3
    statement2                     shift and go to state 4
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    print_statement                shift and go to state 11
    fscanf_statement               shift and go to state 12
    fgets_statement                shift and go to state 13
    assignment_statement           shift and go to state 14
    array_declaration_statement    shift and go to state 15
    function_call                  shift and go to state 18
    for_part1                      shift and go to state 21
    print_function                 shift and go to state 22
    variable                       shift and go to state 25

state 3

    (1) program -> OPEN_TAG statements . CLOSE_TAG
    (3) statements -> statements . statement2
    (4) statement2 -> . statement SEMICOLON
    (5) statement2 -> . if_statement
    (6) statement2 -> . while_statement
    (7) statement2 -> . for_statement
    (8) statement2 -> . ONE_LINE_COMMENT
    (9) statement2 -> . MULTI_LINE_COMMENT
    (10) statement -> . print_statement
    (11) statement -> . fscanf_statement
    (12) statement -> . fgets_statement
    (13) statement -> . assignment_statement
    (14) statement -> . array_declaration_statement
    (15) statement -> . BREAK
    (16) statement -> . CONTINUE
    (17) statement -> . function_call
    (55) if_statement -> . IF parenthesized_condition block else_if_extended if_part3
    (62) while_statement -> . WHILE parenthesized_condition block
    (65) for_statement -> . for_part1 condition for_part3
    (66) for_statement -> . for_part1 for_part3
    (32) print_statement -> . print_function LEFT_PAREN arguments RIGHT_PAREN
    (33) print_statement -> . print_function arguments
    (19) fscanf_statement -> . FSCANF LEFT_PAREN STDIN COMMA STRING COMMA variable_list RIGHT_PAREN
    (18) fgets_statement -> . FGETS LEFT_PAREN STDIN RIGHT_PAREN
    (23) assignment_statement -> . variable assignment_operator argument
    (24) assignment_statement -> . variable PLUS_PLUS
    (25) assignment_statement -> . variable MINUS_MINUS
    (105) array_declaration_statement -> . variable EQUALS array
    (104) function_call -> . NAME LEFT_PAREN array_elements RIGHT_PAREN
    (63) for_part1 -> . FOR LEFT_PAREN assignment_list SEMICOLON
    (64) for_part1 -> . FOR LEFT_PAREN SEMICOLON
    (34) print_function -> . PRINT
    (35) print_function -> . ECHO
    (22) variable -> . ID

    CLOSE_TAG       shift and go to state 31
    ONE_LINE_COMMENT shift and go to state 9
    MULTI_LINE_COMMENT shift and go to state 10
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 17
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FSCANF          shift and go to state 23
    FGETS           shift and go to state 24
    NAME            shift and go to state 26
    FOR             shift and go to state 27
    PRINT           shift and go to state 28
    ECHO            shift and go to state 29
    ID              shift and go to state 30

    statement2                     shift and go to state 32
    statement                      shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    print_statement                shift and go to state 11
    fscanf_statement               shift and go to state 12
    fgets_statement                shift and go to state 13
    assignment_statement           shift and go to state 14
    array_declaration_statement    shift and go to state 15
    function_call                  shift and go to state 18
    for_part1                      shift and go to state 21
    print_function                 shift and go to state 22
    variable                       shift and go to state 25

state 4

    (2) statements -> statement2 .

    CLOSE_TAG       reduce using rule 2 (statements -> statement2 .)
    ONE_LINE_COMMENT reduce using rule 2 (statements -> statement2 .)
    MULTI_LINE_COMMENT reduce using rule 2 (statements -> statement2 .)
    BREAK           reduce using rule 2 (statements -> statement2 .)
    CONTINUE        reduce using rule 2 (statements -> statement2 .)
    IF              reduce using rule 2 (statements -> statement2 .)
    WHILE           reduce using rule 2 (statements -> statement2 .)
    FSCANF          reduce using rule 2 (statements -> statement2 .)
    FGETS           reduce using rule 2 (statements -> statement2 .)
    NAME            reduce using rule 2 (statements -> statement2 .)
    FOR             reduce using rule 2 (statements -> statement2 .)
    PRINT           reduce using rule 2 (statements -> statement2 .)
    ECHO            reduce using rule 2 (statements -> statement2 .)
    ID              reduce using rule 2 (statements -> statement2 .)
    RIGHT_BRACE     reduce using rule 2 (statements -> statement2 .)


state 5

    (4) statement2 -> statement . SEMICOLON

    SEMICOLON       shift and go to state 33


state 6

    (5) statement2 -> if_statement .

    CLOSE_TAG       reduce using rule 5 (statement2 -> if_statement .)
    ONE_LINE_COMMENT reduce using rule 5 (statement2 -> if_statement .)
    MULTI_LINE_COMMENT reduce using rule 5 (statement2 -> if_statement .)
    BREAK           reduce using rule 5 (statement2 -> if_statement .)
    CONTINUE        reduce using rule 5 (statement2 -> if_statement .)
    IF              reduce using rule 5 (statement2 -> if_statement .)
    WHILE           reduce using rule 5 (statement2 -> if_statement .)
    FSCANF          reduce using rule 5 (statement2 -> if_statement .)
    FGETS           reduce using rule 5 (statement2 -> if_statement .)
    NAME            reduce using rule 5 (statement2 -> if_statement .)
    FOR             reduce using rule 5 (statement2 -> if_statement .)
    PRINT           reduce using rule 5 (statement2 -> if_statement .)
    ECHO            reduce using rule 5 (statement2 -> if_statement .)
    ID              reduce using rule 5 (statement2 -> if_statement .)
    RIGHT_BRACE     reduce using rule 5 (statement2 -> if_statement .)


state 7

    (6) statement2 -> while_statement .
